import gamemod.GameMod;

public class Main {
    public static void main(String[] args) {
        GameMod gamemod = new GameMod();
        gamemod.runGame();
    }
}
