@startuml tictactoe

class Main {
	+ main()
}

abstract class AI {
	- difficulty : String
	# maximizing : boolean
	+ AI()
	+ moveMessage()
	# minimax()
}

class EasyAI {
	- rand : Random
	+ EasyAI()
	+ chooseCoordinates()
}

class MediumAI {
	- rand : Random
	+ MediumAI()
	+ chooseCoordinates()
}

class HardAI {
	+ HardAI()
	+ chooseCoordinates()
}

class Board {
	- board : char
	- free: int
	+ Board()
	+ isFree()
	+ getAtCoords()
	+ setAtCoords()
	+ getWinner()
	+ reset()
	+ printBoard()
}

class GameMod {
	- turn : int
	- board : Board
	- players : Player
	- scan : Scanner
	+ GameMod()
	+ runGame()
	- initPlayers()
}

class User {
	- scan : Scanner
	+ User()
	+ chooseCoordinates()
}

abstract class Player {
	- playerChar : char
	+ Player()
	+ chooseCoordinates()
	+ getPlayerChar()
}

Player <|-- User
Player <|-- AI
AI <|-- EasyAI
AI <|-- MediumAI
AI <|-- HardAI
GameMod "2" o-- "*" Player
GameMod "1" o-- "*" Board
Main <.. GameMod

@enduml